syntax = "proto3";

import 'proto/empty.proto';

package chip.rpc;

message ButtonEvent {
  uint32 idx = 1;
  bool pushed = 2;
}

service Button {
  rpc Event(ButtonEvent) returns (Empty){}
}
